chaged the form location

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@ input {
   outline: none;
 }
 </style>
-<body class="flex justify-center items-center bg-[url('https://uuerp.uttaranchaluniversity.ac.in/Images/LoginImg/UUHome.jpg')] bg-cover bg-center h-screen">
-    <div class="border-2">
-        <div class="h-[520px] w-[350px]">
+<body class="mx-20 flex justify-start items-center bg-[url('https://uuerp.uttaranchaluniversity.ac.in/Images/LoginImg/UUHome.jpg')] bg-cover bg-center h-screen">
+    <div class="border-2 h-[520px] w-[300px]">
+        <div class="">
             <nav class="h-36 flex justify-center items-center bg-cyan-50">
             <img src="https://uuerp.uttaranchaluniversity.ac.in/Account/showClientLoginPageLogo" alt="logo" class="h-24">
             </nav>
-            <form action="$post" class="mt-2 flex flex-col gap-8 justify-center items-center  h-[63%]">
+            <form action="$post" class="mt-8 flex flex-col gap-8 justify-center items-center  h-[63%]">
                 <div class="flex items-center border-2">
                     <img src="https://img.icons8.com/?size=100&id=ABBSjQJK83zf&format=png&color=000000" alt="user" class="h-6 px-1">
                     <input type="text" inputmode="numeric" class="h-8 text-center" placeholder="ERP">
@@ -34,13 +34,13 @@ input {
                     </button>
                     <div class="captcha bg-white h-[33px] flex justify-center w-44"></div>
                 </div>
-                <div class="flex items-center border-2">
+                <div class="mt-2 flex items-center border-2">
                     <input type="text" class="h-8 text-center w-52 bg-" placeholder="Enter Captcha">
                 </div>
             </div>
                 <button class="w-52 py-1 px-10 rounded-sm bg-custome-brightBlue shadow-lg hover:brightness-90">Submit</button>
             </form>
-            <div class="pr-3 flex flex-col items-end -mt-4 text-white text-sm">
+            <div class="pr-3 flex flex-col items-end text-white text-sm">
                 <button class="text-center hover:underline">Sign in</button>
                 <button class="text-center hover:underline">Forget Password</button>
             </div>
