--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ input {
             <nav class="h-36 flex justify-center items-center bg-cyan-50">
             <img src="https://uuerp.uttaranchaluniversity.ac.in/Account/showClientLoginPageLogo" alt="logo" class="h-24">
             </nav>
-            <form action="$post" class="mt-2 flex flex-col gap-8 justify-center items-center  h-[63%]">
+            <form action="C:\wamp64\www\Practice\LoginPage.php" method="post" class="mt-2 flex flex-col gap-8 justify-center items-center  h-[63%]">
                 <div class="flex items-center border-2">
                     <img src="https://img.icons8.com/?size=100&id=ABBSjQJK83zf&format=png&color=000000" alt="user" class="h-6 px-1">
                     <input type="text" inputmode="numeric" class="h-8 text-center" placeholder="ERP">
